# winscripts

./: .gitignore
cpp-workspacegen1/: CMakeLists.txt  copy.bat
cpp-workspacegen1/app/: CMakeLists.txt  clog.c  cpplog.cpp
cpp-workspacegen1/include/: mathnipet.h
cpp-workspacegen1/include/dummy/: dummy.h
cpp-workspacegen1/include/utils/: clog.h  log.h
cpp-workspacegen1/src/: CMakeLists.txt  mathnipet.cpp
cpp-workspacegen1/src/utils/: ctest1.c  ctest2.c
cpp-workspacegen2/: .clang-tidy  CMakeLists.txt  import.cmake
cpp-workspacegen2/app/: CMakeLists.txt  main.cpp
cpp-workspacegen2/cmake/: macro.cmake
cpp-workspacegen2/include/: add.h
cpp-workspacegen2/include/dummy/: dummy.h
cpp-workspacegen2/include/dummy/dummy2/: dummy2.h
cpp-workspacegen2/include/utils/: clog.h  log.h
cpp-workspacegen2/src/: CMakeLists.txt  SrcAllInOne.cmake  SrcSeperate.cmake  add.cpp
cpp-workspacegen2/src/dummy/: dummy.cpp  dummy2.cpp
cpp-workspacegen2/src/utils/: clog.c
cpp-workspacegen2/test/: CMakeLists.txt  enummap_test.cpp
cpp-workspacegen2/test/log_test/: clog_test.c  cpplog_test.cpp
cpp_workspace_gen/: .clang-tidy  CMakeLists.txt  copy.bat  copy.sh
cpp_workspace_gen/app/: CMakeLists.txt  main.c  main.cpp
cpp_workspace_gen/cmake/: macro.cmake
cpp_workspace_gen/include/: clog.h  log.h
cpp_workspace_gen/include/utils/: log.h
cpp_workspace_gen/src/: CMakeLists.txt  clog.c  dummy.cpp  log.cpp
cpp_workspace_gen/src/utils/: clog.c  log.cpp
