FILE(GLOB_RECURSE APP_LIST ${PROJECT_SOURCE_DIR}/app/*.cpp ${PROJECT_SOURCE_DIR}/app/*.c)

IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
	ADD_DEFINITIONS(-DDEBUG)
ENDIF()


FILE(
    GLOB_RECURSE GENERATE_LIB_LIST
    ${PROJECT_SOURCE_DIR}/lib/generate/${CMAKE_BUILD_TYPE}/${LIB_TYPE}/*${SRCLIB_SUFFIX}
)
LIST(APPEND GENERATE_LIB_LIST ${SRCLIB_LIST})
LIST(REMOVE_DUPLICATES GENERATE_LIB_LIST)

PRINT_LIST_ITEM("${GENERATE_LIB_LIST}" "GENERATE LIB LIST" "")
PRINT_LIST_ITEM("${IMPORTED_LIB_LIST}" "IMPORTED LIB LIST" "")

FOREACH(app ${APP_LIST})
	GET_FILENAME_COMPONENT(output ${app} NAME_WE)
	ADD_EXECUTABLE(${output} ${app})

	SET(LINKED_LIBS )
    # generate libs
	GET_LIB_NAME("${GENERATE_LIB_LIST}" return_list)
    TARGET_LINK_LIBRARIES(${output} ${return_list})
    LIST(APPEND LINKED_LIBS ${return_list})

    # imported libs
    GET_LIB_NAME("${IMPORTED_LIB_LIST}" return_list)
    TARGET_LINK_LIBRARIES(${output} ${return_list})
    LIST(APPEND LINKED_LIBS ${return_list})

    LIST(REMOVE_DUPLICATES LINKED_LIBS)
    MESSAGE("${output}\twill be linked with: ${LINKED_LIBS}")
ENDFOREACH()

INSTALL_SHARED_LIB("${GENERATE_LIB_LIST}" ${SHARED_LIB_SUFFIX} ${EXECUTABLE_OUTPUT_PATH})
INSTALL_SHARED_LIB("${IMPORTED_LIB_LIST}" ${SHARED_LIB_SUFFIX} ${EXECUTABLE_OUTPUT_PATH})
