FILE(GLOB_RECURSE APP_LIST ${PROJECT_SOURCE_DIR}/app/*.cpp ${PROJECT_SOURCE_DIR}/app/*.c)

IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
	ADD_DEFINITIONS(-DDEBUG)
ENDIF()


PRINT_LIST_ITEM("${LIB_LIST}" "LIB LIST" "")

FILE(
    GLOB_RECURSE RUNTIMELIB_LIST
    ${PROJECT_SOURCE_DIR}/src/runtimelib/${CMAKE_BUILD_TYPE}/${LIB_TYPE}/*${SRCLIB_SUFFIX}
)
LIST(APPEND RUNTIMELIB_LIST ${SRCLIB_LIST})
LIST(REMOVE_DUPLICATES RUNTIMELIB_LIST)
PRINT_LIST_ITEM("${RUNTIMELIB_LIST}" "RUNTIME LIB LIST" "")

FOREACH(app ${APP_LIST})
	GET_FILENAME_COMPONENT(output ${app} NAME_WE)
	ADD_EXECUTABLE(${output} ${app})

	SET(LINKED_LIBS )
    # self runtime libs
	GET_LIB_NAME("${RUNTIMELIB_LIST}" return_list)
    TARGET_LINK_LIBRARIES(${output} ${return_list})
    LIST(APPEND LINKED_LIBS ${return_list})

    # third party libs
    GET_LIB_NAME("${LIB_LIST}" return_list)
    TARGET_LINK_LIBRARIES(${output} ${return_list})
    LIST(APPEND LINKED_LIBS ${return_list})

    LIST(REMOVE_DUPLICATES LINKED_LIBS)
    MESSAGE("${output}\twill be linked with: ${LINKED_LIBS}")
ENDFOREACH()

INSTALL_SHARED_LIB("${RUNTIMELIB_LIST}" ${SHARED_LIB_SUFFIX} ${EXECUTABLE_OUTPUT_PATH})
INSTALL_SHARED_LIB("${LIB_LIST}" ${SHARED_LIB_SUFFIX} ${EXECUTABLE_OUTPUT_PATH})
