GET_LIB_SUFFIX(static_lib_suffix shared_lib_suffix)
SET(STATIC_LIB_SUFFIX ${static_lib_suffix})
SET(SHARED_LIB_SUFFIX ${shared_lib_suffix})

IF(USE_STATIC_LIB)
    SET(SRCLIB_SUFFIX ${STATIC_LIB_SUFFIX})
ELSE()
    SET(SRCLIB_SUFFIX ${SHARED_LIB_SUFFIX})
ENDIF()

# propagate to CMakeLists.txt in app dir
SET(STATIC_LIB_SUFFIX ${STATIC_LIB_SUFFIX} PARENT_SCOPE)
SET(SHARED_LIB_SUFFIX ${SHARED_LIB_SUFFIX} PARENT_SCOPE)
SET(SRCLIB_SUFFIX     ${SRCLIB_SUFFIX}     PARENT_SCOPE)
SET(SRCLIB_LIST )

# third party libs may needed to be linked first
FILE(
    GLOB_RECURSE LIB_LIST 
    ${PROJECT_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE}/*${STATIC_LIB_SUFFIX}
    ${PROJECT_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE}/*${SHARED_LIB_SUFFIX}
)
SET(LIB_LIST ${LIB_LIST} PARENT_SCOPE)
LIST(REMOVE_DUPLICATES LIB_LIST)

FILE(
    GLOB_RECURSE INSRC_LIST
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.c
)
IF(INSRC_LIST)
    ADD_LIBRARY("insrc" ${LIB_TYPE} ${INSRC_LIST})
    GET_LIB_NAME("${LIB_LIST}" THIRD_PARTY_LIB_NAMES)
    TARGET_LINK_LIBRARIES("insrc" ${THIRD_PARTY_LIB_NAMES})

	SET(SRCLIB_LIST ${LIBRARY_OUTPUT_PATH}/libinsrc${SRCLIB_SUFFIX})
    # INSTALL(
    #     TARGETS runtime
    #     # CMake treats 'SHARED' library as type 'RUNTIME object'
    #     LIBRARY DESTINATION ${EXECUTABLE_OUTPUT_PATH}
    #     RUNTIME DESTINATION ${EXECUTABLE_OUTPUT_PATH}
    #     # ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}
    # )
    
    # PRINT_LIST_ITEM("${SRC_LIST}" "SRC LIST" "")
ENDIF()


# list all sub-directories under the src directory
FILE(GLOB DIR_NODES LIST_DIRECTORIES TRUE ${CMAKE_CURRENT_SOURCE_DIR}/*)
SET(SUBSRC_DIRS )
FOREACH(NODE IN LISTS DIR_NODES)
    IF(IS_DIRECTORY ${NODE})
        SET(SUBSRC_DIRS ${SUBSRC_DIRS} ${NODE})
    ENDIF()
ENDFOREACH()
FOREACH(SUBSRC_DIR IN LISTS SUBSRC_DIRS)
    FILE(
        GLOB_RECURSE SUBSRC_LIST
        ${SUBSRC_DIR}/*.c
        ${SUBSRC_DIR}/*.cpp
    )
    IF(SUBSRC_LIST)
        GET_FILENAME_COMPONENT(SUBLIB_NAME ${SUBSRC_DIR} NAME)
        ADD_LIBRARY(${SUBLIB_NAME} ${LIB_TYPE} ${SUBSRC_LIST})
        GET_LIB_NAME("${LIB_LIST}" THIRD_PARTY_LIB_NAMES)
        TARGET_LINK_LIBRARIES(${SUBLIB_NAME} ${THIRD_PARTY_LIB_NAMES})

        SET(SRCLIB_LIST ${SRCLIB_LIST} ${LIBRARY_OUTPUT_PATH}/lib${SUBLIB_NAME}${SRCLIB_SUFFIX})
    ENDIF()
ENDFOREACH()
SET(SRCLIB_LIST ${SRCLIB_LIST} PARENT_SCOPE)
